# deploy-it.dk

./: .gitignore  Dockerfile  NOTES.md  README.md  api_config.yaml  clicx-bin  compose.yaml  gunicorn.sh  pyproject.toml  todo
.github/workflows/: pipeline.yaml
addons/base/: __manifest__.py
addons/base/controller/: index.py
addons/base/internal/: debug.py
addons/base/models/: users.py
addons/base/pages/: index.py
addons/base/pub_env/: .env
addons/base/routes/: config_utils.py  templates_utils.py  utils.py
addons/base/templates/: .conf2.jinja  debug.html.jinja  index.html.jinja
addons/openvpn/: __manifest__.py
addons/openvpn/models/: openvpn.py
addons/openvpn/routes/: client.py  openvpn.py
addons/openvpn/schema/: client.py
addons/openvpn/template/: client_template.ovpn
addons/proxmox/: __init__.py  __maifest__.py
addons/proxmox/cli/: api.py  container.py  setup.py  test_command.py  vm.py
addons/proxmox/configurations/: pre-config-vm.json  proxmox.json  software-configurations.json
addons/proxmox/enums/: auth.py  proxmox.py  qemu.py  status.py
addons/proxmox/middleware/: auth.py
clicx/: __init__.py  __main__.py  config.py  logger.py  server.py
clicx/_models/: users.py
clicx/cli/: __init__.py  command.py  database.py  server.py
clicx/database/: __init__.py  base.py  connection.py  cr.py  fields.py  models.py  registry.py  sql.py
clicx/templates/: clicx.conf.jinja  index.html.jinja
clicx/utils/: __init__.py  exceptions.py  jinja.py  middleware.py  python.py  security.py  shell.py  version.py
docs/: readme.md
(+42 files in other folders)
