[project]
name = "clicx"
description = ""
readme = "README.md"

[project.scripts]
clicx = "clicx.cli.command:main"

[tool.setuptools]
scripts = ["clicx-bin"]

[tool.poetry]
name = "clicx"
version = "0.1.0"
description = ""
authors = ["martin <mart337i@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.6"
python-dotenv = "^1.0.1"
typer-cli = "^0.15.2"
rich  = "^13.9.4"
fastapi = {extras = ["standard"], version = "^0.115.11"}
urllib3 = "^2.3.0"
psutil = "^7.0.0"
proxmoxer = "^2.2.0"
cryptography = "^44.0.2"
sqlalchemy = "^2.0.39"
setuptools = "70.0.0"
sqlalchemy-utils = "^0.41.2"
requests = "^2.32.3"
validators = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

